# exp_algo

./: .gitignore  evaluation.ipynb  experiments.yml  solution.txt  status.cache
dev-builds/hashing.compile/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
develop/hashing/: main.cpp  main.cpp~  meson.build
ex2-hash-concurrent/: evaluation.ipynb  experiments.yml
ex2-hash-dynamic/: evaluation.ipynb  experiments.yml
ex2-wordcount/: evaluation.ipynb  experiments.yml
ex3-graph-csr/: evaluation.ipynb  experiments.yml
ex3-graph-csr/develop/csr/: meson.build  native.meson  sssp-cpu.cpp  sssp-gpu.cu  transpose.cpp
ex4-graph-delta/: experiments.yml
ex4-graph-mssp/: evaluation.ipynb  experiments.yml
my_build/: build.ninja  compile_commands.json  hashing
my_build/meson-info/: intro-buildoptions.json  intro-installed.json  intro-targets.json  meson-info.json
my_build/meson-logs/: meson-log.txt
my_build/meson-private/: cmd_line.txt
output/hashing~chaining,ff50@_dev/: dummy.out  dummy.status
output/hashing~chaining,ff80@_dev/: dummy.out  dummy.status
output/hashing~chaining,ff90@_dev/: dummy.out  dummy.status
output/hashing~chaining,ff95@_dev/: dummy.out  dummy.status
output/hashing~chaining,ff99@_dev/: dummy.out  dummy.status
output/hashing~ff50,linear@_dev/: dummy.out  dummy.status
output/hashing~ff50,quadratic@_dev/: dummy.out  dummy.status
output/hashing~ff50,robin_hood@_dev/: dummy.out  dummy.status
output/hashing~ff50,stl@_dev/: dummy.out  dummy.status
output/hashing~ff80,linear@_dev/: dummy.out  dummy.status
(+55 files in other folders)
